--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.69.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/node": "^18.7.18"
   },
   "private": true
 }
